# cosmic-term

./: .gitignore  .releaserc.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Taskfile.yml
.github/workflows/: release.yaml  test.yaml
debian/: control
i18n/af/: cosmic_term.ftl
i18n/ar/: cosmic_term.ftl
i18n/be/: cosmic_term.ftl
i18n/bg/: cosmic_term.ftl
i18n/cs/: cosmic_term.ftl
i18n/de/: cosmic_term.ftl
i18n/el/: cosmic_term.ftl
i18n/en/: cosmic_term.ftl
i18n/en-GB/: cosmic_term.ftl
i18n/es-419/: cosmic_term.ftl
i18n/es-ES/: cosmic_term.ftl
i18n/et/: cosmic_term.ftl
i18n/fi/: cosmic_term.ftl
i18n/fr/: cosmic_term.ftl
i18n/fy/: cosmic_term.ftl
i18n/ga/: cosmic_term.ftl
i18n/hi/: cosmic_term.ftl
i18n/hu/: cosmic_term.ftl
i18n/id/: cosmic_term.ftl
i18n/is/: cosmic_term.ftl
i18n/it/: cosmic_term.ftl
i18n/ja/: cosmic_term.ftl
i18n/kab/: cosmic_term.ftl
i18n/kk/: cosmic_term.ftl
i18n/kn/: cosmic_term.ftl
i18n/ko/: cosmic_term.ftl
i18n/lt/: cosmic_term.ftl
i18n/nb-NO/: cosmic_term.ftl
i18n/nl/: cosmic_term.ftl
i18n/nn/: cosmic_term.ftl
i18n/pa/: cosmic_term.ftl
i18n/pl/: cosmic_term.ftl
i18n/pt/: cosmic_term.ftl
i18n/pt-BR/: cosmic_term.ftl
i18n/ro/: cosmic_term.ftl
i18n/ru/: cosmic_term.ftl
i18n/sk/: cosmic_term.ftl
i18n/sr-Cyrl/: cosmic_term.ftl
i18n/sr-Latn/: cosmic_term.ftl
i18n/sv-SE/: cosmic_term.ftl
i18n/th/: cosmic_term.ftl
i18n/tr/: cosmic_term.ftl
i18n/uk/: cosmic_term.ftl
i18n/zh-CN/: cosmic_term.ftl
i18n/zh-TW/: cosmic_term.ftl
packaging/rpm/: build-rpm.sh  cosmic-term.spec
pkg/rpm/: cosmic-term.spec
res/: com.system76.CosmicTerm.desktop  com.system76.CosmicTerm.metainfo.xml
src/: config.rs  localize.rs  main.rs  menu.rs  password_manager.rs  terminal.rs
