[package]
name = "cosmic-term"
version = "1.1.2"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.85"

[dependencies]
alacritty_terminal = "0.25.1"
hex_color = { version = "3", features = ["serde"] }
indexmap = "2"
log = "0.4"
open = "5.3.2"
palette = { version = "0.7", features = ["serde"] }
paste = "1.0"
ron = "0.11"
serde = { version = "1", features = ["serde_derive"] }
shlex = "1"
tokio = { version = "1", features = ["sync"] }
# CLI arguments
clap_lex = "0.7"
# Internationalization
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
icu = { version = "2.1.1", features = ["compiled_data"] }
rust-embed = "8"
url = "2.5"
secret-service = { version = "5.1.0", features = [
    "rt-tokio-crypto-rust",
], optional = true }
thiserror = { version = "2.0", optional = true }
secstr = { version = "0.5", optional = true }

[dependencies.cosmic-text]
git = "https://github.com/pop-os/cosmic-text.git"
features = ["monospace_fallback", "shape-run-cache"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
#TODO: a11y feature crashes file chooser dialog
features = ["about", "multi-window", "tokio", "winit", "surface-message", "xdg-portal"]

[target.'cfg(unix)'.dependencies]
fork = "0.4"

[features]
default = ["dbus-config", "wgpu", "wayland", "password_manager"]
dbus-config = ["libcosmic/dbus-config"]
wgpu = ["libcosmic/wgpu"]
wayland = ["libcosmic/wayland"]
password_manager = ["secret-service", "thiserror", "secstr"]

[profile.release-with-debug]
inherits = "release"
debug = true


[patch.'https://github.com/pop-os/libcosmic']
libcosmic = { git = "https://github.com/playtron-os/libcosmic.git" }
cosmic-config = { git = "https://github.com/playtron-os/libcosmic.git" }
cosmic-config-derive = { git = "https://github.com/playtron-os/libcosmic.git" }
cosmic-theme = { git = "https://github.com/playtron-os/libcosmic.git" }
iced = { git = "https://github.com/playtron-os/libcosmic.git" }
iced_core = { git = "https://github.com/playtron-os/libcosmic.git" }
iced_futures = { git = "https://github.com/playtron-os/libcosmic.git" }
iced_graphics = { git = "https://github.com/playtron-os/libcosmic.git" }
iced_renderer = { git = "https://github.com/playtron-os/libcosmic.git" }
iced_runtime = { git = "https://github.com/playtron-os/libcosmic.git" }
iced_tiny_skia = { git = "https://github.com/playtron-os/libcosmic.git" }
iced_wgpu = { git = "https://github.com/playtron-os/libcosmic.git" }
iced_widget = { git = "https://github.com/playtron-os/libcosmic.git" }
iced_winit = { git = "https://github.com/playtron-os/libcosmic.git" }
